typescript/checker/tests/conformance/parser/ecmascript5/Accessors/parserAccessors3.ts.stderr
error: A 'get' accessor must return a value.
 --> $DIR/tests/conformance/parser/ecmascript5/Accessors/parserAccessors3.ts:2:15
  |
2 | var v = { get Foo() { } };
  |               ^^^

